20240128 Remove prediction in `g_main` | Update `README.md` and `g_ibmq`

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -1,84 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run on IBMQ real device\n",
+    "\n",
+    "This script runs the pretrained QCGNN on IBMQ real device. The default shots is 1024."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import time\n",
+    "from itertools import product\n",
     "\n",
     "import lightning as L\n",
     "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as nn\n",
     "from tqdm import tqdm\n",
     "\n",
     "import g_main\n",
     "import module_gmail\n",
-    "import module_model\n",
-    "\n",
-    "QCGNN = module_model.QCGNN_IX\n",
-    "\n",
-    "shots = 1024\n",
-    "\n",
-    "general_config = g_main.json_config.copy()\n",
-    "general_config[\"batch_size\"] = 10\n",
-    "general_config[\"rnd_seed\"] = 0\n",
-    "general_config[\"max_num_ptcs\"] = 2\n",
-    "general_config[\"num_bin_data\"] = 100 # {100} * 10 * 2 * (1 - 0.8) = 400 test data\n",
-    "L.seed_everything(general_config[\"rnd_seed\"])\n",
-    "\n",
-    "# Quantum configurations.\n",
-    "qidx = int(np.ceil(np.log2(general_config[\"max_num_ptcs\"])))\n",
-    "qnn, gl, gr  = 7, 1, 7\n",
+    "import module_training\n",
     "\n",
     "# Output directory.\n",
+    "general_config = g_main.json_config.copy()\n",
     "ibmq_dir = os.path.join(general_config[\"predictions_dir\"], \"ibmq\")\n",
     "os.makedirs(ibmq_dir, exist_ok=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class IBMQQuantumRotQCGNN(g_main.QuantumRotQCGNN):\n",
-    "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, quantum_config):\n",
-    "        \"\"\"Change phi from QCGNN to IBMQQCGNN.\"\"\"\n",
-    "        \n",
-    "        super().__init__(\n",
-    "            num_ir_qubits=num_ir_qubits,\n",
-    "            num_nr_qubits=num_nr_qubits,\n",
-    "            num_layers=num_layers,\n",
-    "            num_reupload=num_reupload,\n",
-    "            quantum_config=quantum_config,\n",
-    "            aggregation=\"SUM\",\n",
-    "        )\n",
-    "        \n",
-    "        # Set `return_meas` = True.\n",
-    "        self.phi = QCGNN(\n",
-    "            num_ir_qubits=num_ir_qubits,\n",
-    "            num_nr_qubits=num_nr_qubits,\n",
-    "            num_layers=num_layers,\n",
-    "            num_reupload=num_reupload,\n",
-    "            ctrl_enc=self.ctrl_enc,\n",
-    "            shots=shots,\n",
-    "            aggregation=\"SUM\",\n",
-    "            return_meas=True,\n",
-    "            **quantum_config\n",
-    "        )\n",
+    "### Settings and Dataset\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        # Additional measurement outputs from IBMQQCGNN.\n",
-    "        x, meas = self.phi(x)\n",
+    "The number of dataset should be modified, otherwise too many data will queue for a long time. We choose the number of `num_bin_data = 100` such that the total number of data is\n",
     "\n",
-    "        # Original workflow.\n",
-    "        x = self.mlp(x)\n",
-    "\n",
-    "        return x.detach(), meas"
+    "> `num_bin_data` $*$ `bin` $*$ `2 channels` $*$ $(1 - $`data_ratio`$)$\n",
+    "> \n",
+    "> => $100 * 10 * 2 * (1-0.8)=400$"
    ]
   },
   {
@@ -87,75 +59,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_state_dict(model: nn.Module, ckpt_path: str):\n",
-    "    \"\"\"Load model checkpoints parameters.\n",
+    "shots = 1024\n",
+    "rnd_seed_range = range(3)\n",
+    "\n",
+    "# Modify the configuration.\n",
+    "max_num_ptcs = 2\n",
+    "general_config[\"batch_size\"] = 50\n",
+    "general_config[\"max_num_ptcs\"] = max_num_ptcs\n",
+    "general_config[\"pad_num_ptcs\"] = max_num_ptcs\n",
+    "general_config[\"num_bin_data\"] = 100\n",
+    "\n",
+    "# Quantum configurations.\n",
+    "num_ir_qubits = int(np.ceil(np.log2(max_num_ptcs)))\n",
+    "num_nr_qubits = 3\n",
+    "num_layers = 1\n",
+    "num_reupload = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_config_list = [\n",
+    "    # 2-prong v.s. 1-prong.\n",
+    "    g_main.generate_data_config(\n",
+    "        sig=\"VzToZhToVevebb\",\n",
+    "        bkg=\"VzToQCD\",\n",
+    "        abbrev=\"BB-QCD\",\n",
+    "        general_config=general_config,\n",
+    "    ),\n",
     "    \n",
+    "    # 3-prong v.s. 1-prong.\n",
+    "    g_main.generate_data_config(\n",
+    "        sig=\"VzToTt\",\n",
+    "        bkg=\"VzToQCD\",\n",
+    "        abbrev=\"TT-QCD\",\n",
+    "        general_config=general_config,\n",
+    "    ),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prediction function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prediction(x: torch.Tensor, data_config: dict, quantum_config: dict):\n",
+    "    \"\"\"Predict with the pretrained model.\n",
+    "\n",
     "    Args:\n",
-    "        model : nn.Module\n",
-    "            Model to be load state dict.\n",
-    "        ckpt_path : str\n",
-    "            Path of checkpoints.\n",
+    "        x : torch.Tensor\n",
+    "            Data to be predicted.\n",
+    "        data_config : dict\n",
+    "            Information about the data.\n",
+    "        quantum_config : dict\n",
+    "            Configurations of the quantum device.\n",
+    "\n",
+    "    Returns:\n",
+    "        torch.Tensor -> Predictions.\n",
     "    \"\"\"\n",
     "\n",
-    "    # The keys of ckpt state_dict somehow different than loading keys.\n",
-    "    old_state_dict = torch.load(ckpt_path)[\"state_dict\"]\n",
-    "    new_state_dict = {}\n",
-    "    for old_key in old_state_dict.keys():\n",
-    "        # Containing prefix \"model.\", no need this prefix.\n",
-    "        new_key = old_key[6:]\n",
-    "        print(f\"state_dict key updated: {old_key} ---> {new_key}\")\n",
-    "        new_state_dict[new_key] = old_state_dict[old_key]\n",
-    "    model.load_state_dict(new_state_dict)\n",
-    "\n",
-    "def prediction(x, data_config, quantum_config):\n",
-    "    # Choose pretrained model with number of particles = 16 -> qidx = log2(16) = 43\n",
-    "    model_suffix = f\"qidx4_qnn{qnn}_gl{gl}_gr{gr}\"\n",
+    "    # The `qidx` is fixed since we trained the model with `num_ir_qubits = 4`.\n",
+    "    model_suffix = f\"qidx4_qnn{num_nr_qubits}_gl{num_layers}_gr{num_reupload}\"\n",
     "\n",
     "    # Get checkpoints file.\n",
     "    data_suffix = f\"{data_config['abbrev']}_ptc16_thres0.05-nb500_R0\"\n",
     "    ckpt_key = f\"QCGNN_IX_{model_suffix}_SUM-{data_suffix}\"\n",
-    "    ckpt_path = g_main.get_ckpt_path(ckpt_key, general_config[\"rnd_seed\"])\n",
+    "    ckpt_path = module_training.get_ckpt_path(ckpt_key, general_config[\"rnd_seed\"])\n",
     "    \n",
     "    # Create model and load checkpoints.\n",
-    "    model = IBMQQuantumRotQCGNN(qidx, qnn, gl, gr, quantum_config)\n",
-    "    load_state_dict(model, ckpt_path)\n",
+    "    model = g_main.QuantumRotQCGNN(\n",
+    "        num_ir_qubits=num_ir_qubits,\n",
+    "        num_nr_qubits=num_nr_qubits,\n",
+    "        num_layers=num_layers,\n",
+    "        num_reupload=num_reupload,\n",
+    "        quantum_config=quantum_config,\n",
+    "        return_meas=True\n",
+    "    )\n",
+    "\n",
+    "    # Load the pretrained model and set to evaluation mode.\n",
+    "    module_training.load_state_dict(model, ckpt_path)\n",
     "    model.eval()\n",
     "    \n",
     "    return model(x)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Recreate a new data configuration list.\n",
-    "data_config_list = [\n",
-    "    # 2-prong v.s. 1-prong.\n",
-    "    g_main.generate_data_config(\n",
-    "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
-    "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
-    "        num_bin_data=general_config[\"num_bin_data\"],\n",
-    "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
-    "        pad_num_ptcs=(2 ** qidx),\n",
-    "        pt_threshold=general_config[\"pt_threshold\"],\n",
-    "        num_ptcs_range=(2 ** qidx, 2 ** qidx),\n",
-    "        print_log=True,\n",
-    "    ),\n",
-    "    \n",
-    "    # 3-prong v.s. 1-prong.\n",
-    "    g_main.generate_data_config(\n",
-    "        sig=\"VzToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
-    "        cut_pt=(800, 1000), subjet_radius=0, bin=10,\n",
-    "        num_bin_data=general_config[\"num_bin_data\"],\n",
-    "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
-    "        pad_num_ptcs=(2 ** qidx),\n",
-    "        pt_threshold=general_config[\"pt_threshold\"],\n",
-    "        num_ptcs_range=(2 ** qidx, 2 ** qidx),\n",
-    "        print_log=True,\n",
-    "    ),\n",
-    "]"
+    "### Run on IBMQ\n",
+    "\n",
+    "A gmail will be sent from `maplexsendxemail@gmail.com` when the script is finished. See `except` and `else` sections in `try` for detail message of the email.\n",
+    "\n",
+    "The email settings are saved in `./gmail.json` (which is default inavailable in `.gitignore`), the detail structure of the `./gmail.json` file is:\n",
+    "\n",
+    "- \"from\": \"maplexsendxemail@gmail.com\",\n",
+    "- \"to\": \"example@email.address\",\n",
+    "- \"passwd\": \"xxxxxxxxxxxxxxxx\" (16-character password without spaces.)"
    ]
   },
   {
@@ -164,16 +175,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose an IBMQ backend\n",
-    "ibmq_backend = input(\"Enter IBMQ backend = \") or \"ibmq_qasm_simulator\"\n",
-    "\n",
-    "# Record logs with `script` command.\n",
-    "current_time = time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
-    "log_file = f\"_log_{current_time}.txt\"\n",
-    "\n",
     "try:\n",
+    "    # Choose an IBMQ backend\n",
+    "    ibmq_backend = input(\"Enter IBMQ backend = \") or \"ibmq_qasm_simulator\"\n",
+    "\n",
     "    # Prediction on IBMQ.\n",
-    "    for data_config in data_config_list:\n",
+    "    for data_config, rnd_seed in product(data_config_list, rnd_seed_range):\n",
+    "        \n",
+    "        # Seed everything.\n",
+    "        general_config[\"rnd_seed\"] = rnd_seed\n",
+    "        L.seed_everything(general_config[\"rnd_seed\"])\n",
     "        \n",
     "        # Create the data module.\n",
     "        data_module = g_main.generate_datamodule(\n",
@@ -184,8 +195,13 @@
     "        )\n",
     "\n",
     "        # Buffers for saving data.\n",
-    "        x, y_true, y_penl, meas_penl, y_ibmq, meas_ibmq = [torch.tensor([]) for _ in range(6)]\n",
+    "        x, y_true = torch.tensor([]), torch.tensor([])\n",
+    "        y_penl, meas_penl = torch.tensor([]), torch.tensor([])\n",
+    "        y_ibmq, meas_ibmq = torch.tensor([]), torch.tensor([])\n",
+    "\n",
+    "        # Batch data and batch label will start with prefix \"_\".\n",
     "        for _x, _y_true in tqdm(data_module.test_dataloader()):\n",
+    "            \n",
     "            # Prediction on PennyLane.\n",
     "            _y_penl, _meas_penl = prediction(\n",
     "                x=_x,\n",
@@ -209,11 +225,14 @@
     "            )\n",
     "\n",
     "            # Dataset and true labels.\n",
-    "            x, y_true = torch.cat((x, _x)), torch.cat((y_true, _y_true))\n",
+    "            x = torch.cat((x, _x))\n",
+    "            y_true = torch.cat((y_true, _y_true))\n",
     "            \n",
     "            # Save predictions to buffers.\n",
-    "            y_penl, meas_penl = torch.cat((y_penl, _y_penl)), torch.cat((meas_penl, _meas_penl))\n",
-    "            y_ibmq, meas_ibmq = torch.cat((y_ibmq, _y_ibmq)), torch.cat((meas_ibmq, _meas_ibmq))\n",
+    "            y_penl = torch.cat((y_penl, _y_penl))\n",
+    "            y_ibmq = torch.cat((y_ibmq, _y_ibmq))\n",
+    "            meas_penl = torch.cat((meas_penl, _meas_penl))\n",
+    "            meas_ibmq = torch.cat((meas_ibmq, _meas_ibmq))\n",
     "\n",
     "        # Output dictionary    \n",
     "        result = {\n",
@@ -224,20 +243,12 @@
     "\n",
     "        # Save result to npy files.\n",
     "        npy_file = (\n",
-    "            # backend - shots - abbrev\n",
     "            f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_\"\n",
-    "\n",
-    "            # rnd_seed - max_num_ptcs\n",
-    "            + f\"r{general_config['rnd_seed']}-p{general_config['max_num_ptcs']}_\"\n",
-    "\n",
-    "            # num_bin_data\n",
-    "            + f\"n{general_config['num_bin_data']}_\"\n",
-    "\n",
-    "            # batch_size - qnn_gl_gr\n",
-    "            + f\"b{general_config['batch_size']}-{qnn}_{gl}_{gr}\"\n",
-    "\n",
-    "            # npy suffix.\n",
-    "            + \".npy\"\n",
+    "            f\"r{general_config['rnd_seed']}-\"\n",
+    "            f\"p{general_config['max_num_ptcs']}_\"\n",
+    "            f\"n{general_config['num_bin_data']}_\"\n",
+    "            f\"b{general_config['batch_size']}-\"\n",
+    "            f\"{num_nr_qubits}_{num_layers}_{num_reupload}.npy\"\n",
     "        )\n",
     "        npy_path = os.path.join(ibmq_dir, npy_file)\n",
     "        np.save(npy_path, result, allow_pickle=True)\n",
@@ -247,11 +258,13 @@
     "    message = str(e)\n",
     "\n",
     "else:\n",
+    "    model_suffix = f\"qidx4_qnn{num_nr_qubits}_gl{num_layers}_gr{num_reupload}\"\n",
     "    subject = f\"Finished running ibmq on {ibmq_backend}\"\n",
-    "    message = f\"Finish qidx4_qnn{qnn}_gl{gl}_gr{gr} with rnd_seed = {general_config['rnd_seed']}\"\n",
+    "    message = f\"Finish {model_suffix} with rnd_seed_range = {rnd_seed_range}\"\n",
     "\n",
     "finally:\n",
-    "    module_gmail.send_email(subject, message, config=general_config)"
+    "    if os.path.isfile(\"gmail.json\"):\n",
+    "        module_gmail.send_email(subject, message, config=general_config)"
    ]
   }
  ],
