--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20240117\"\n",
-    "suffix  = \"BM3-10\"\n",
+    "date    = \"20240111\"\n",
+    "suffix  = \"\"\n",
     "project = \"g_var\"\n",
     "state   = \"\"\n",
     "\n",
