20240128 Update requirements.txt | Add usage for IBMQ in README.md

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Run on IBMQ real device\n",
     "\n",
-    "This script runs the pretrained QCGNN on IBMQ real device. The default shots is 1024."
+    "**Important**\n",
+    "- `pip install pennylane-qiskit` before launching.\n",
+    "- Create `./config.toml` file, see [PennyLane Configuration File](https://docs.pennylane.ai/en/latest/introduction/configuration.html#format) for further detail.\n",
+    "\n",
+    "This script runs the pretrained QCGNN on IBMQ real device with the default `shots` is 1024."
    ]
   },
   {
@@ -37,7 +41,15 @@
     "# Output directory.\n",
     "general_config = g_main.json_config.copy()\n",
     "ibmq_dir = os.path.join(general_config[\"predictions_dir\"], \"ibmq\")\n",
-    "os.makedirs(ibmq_dir, exist_ok=True)"
+    "os.makedirs(ibmq_dir, exist_ok=True)\n",
+    "\n",
+    "# Check `config.toml` file\n",
+    "if not os.path.isfile(\"config.toml\"):\n",
+    "    raise FileNotFoundError(\n",
+    "        \"`./config.toml` file (containing IBMQ account token) not found, \"\n",
+    "        \"see https://docs.pennylane.ai/en/latest/introduction/configuration.html#format \"\n",
+    "        \"for futher detail.\"\n",
+    "    )"
    ]
   },
   {
@@ -60,7 +72,7 @@
    "outputs": [],
    "source": [
     "shots = 1024\n",
-    "rnd_seed_range = range(3)\n",
+    "rnd_seed_range = range(1)\n",
     "\n",
     "# Modify the configuration.\n",
     "max_num_ptcs = 2\n",
