20240128 Add `num_ptc_range` to IBMQ for Hadamard initialization

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -72,20 +72,21 @@
    "outputs": [],
    "source": [
     "shots = 1024\n",
-    "rnd_seed_range = range(1)\n",
+    "rnd_seed_range = range(3)\n",
     "\n",
     "# Modify the configuration.\n",
-    "max_num_ptcs = 2\n",
+    "max_num_ptcs = 4\n",
     "general_config[\"batch_size\"] = 50\n",
     "general_config[\"max_num_ptcs\"] = max_num_ptcs\n",
     "general_config[\"pad_num_ptcs\"] = max_num_ptcs\n",
+    "general_config[\"num_ptcs_range\"] = (max_num_ptcs, max_num_ptcs)\n",
     "general_config[\"num_bin_data\"] = 100\n",
     "\n",
     "# Quantum configurations.\n",
     "num_ir_qubits = int(np.ceil(np.log2(max_num_ptcs)))\n",
-    "num_nr_qubits = 3\n",
+    "num_nr_qubits = 7\n",
     "num_layers = 1\n",
-    "num_reupload = 3"
+    "num_reupload = 7"
    ]
   },
   {
@@ -276,7 +277,10 @@
     "\n",
     "finally:\n",
     "    if os.path.isfile(\"gmail.json\"):\n",
-    "        module_gmail.send_email(subject, message, config=general_config)"
+    "        module_gmail.send_email(subject, message, config=general_config)\n",
+    "    else:\n",
+    "        print(subject)\n",
+    "        print(message)"
    ]
   }
  ],
