--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -170,6 +170,7 @@
     "    pad_num_ptcs = general_config[\"pad_num_ptcs\"]\n",
     "    pt_threshold = general_config[\"pt_threshold\"]\n",
     "    subjet_radius = general_config[\"subjet_radius\"]\n",
+    "    num_ptcs_range = general_config[\"num_ptcs_range\"]\n",
     "\n",
     "    data_config = {\n",
     "        \"sig\": sig,  # Signal channel.\n",
@@ -182,7 +183,7 @@
     "        \"max_num_ptcs\": max_num_ptcs,  # Drop particles if exceed this number.\n",
     "        \"pad_num_ptcs\": pad_num_ptcs,  # Pad to this number with zero pt.\n",
     "        \"pt_threshold\": pt_threshold,  # Drop particles less than this threshold.\n",
-    "        \"num_ptcs_range\": None,  # This is used for running on real device.\n",
+    "        \"num_ptcs_range\": num_ptcs_range,  # This is used for running on real device.\n",
     "        \"print_log\": True,  # Whether print random sampling message.\n",
     "    }\n",
     "    \n",
