20240202 Add noise simulation in `g_ibmq.ipynb`

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -71,11 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "D = 7\n",
     "shots = 1024\n",
     "rnd_seed_range = range(3)\n",
     "\n",
     "# Modify the configuration.\n",
-    "max_num_ptcs = 4\n",
+    "max_num_ptcs = 2\n",
     "general_config[\"batch_size\"] = 50\n",
     "general_config[\"max_num_ptcs\"] = max_num_ptcs\n",
     "general_config[\"pad_num_ptcs\"] = max_num_ptcs\n",
@@ -84,9 +85,9 @@
     "\n",
     "# Quantum configurations.\n",
     "num_ir_qubits = int(np.ceil(np.log2(max_num_ptcs)))\n",
-    "num_nr_qubits = 7\n",
+    "num_nr_qubits = D\n",
     "num_layers = 1\n",
-    "num_reupload = 7"
+    "num_reupload = D"
    ]
   },
   {
@@ -188,11 +189,120 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    # Choose an IBMQ backend\n",
-    "    ibmq_backend = input(\"Enter IBMQ backend = \") or \"ibmq_qasm_simulator\"\n",
+    "# try:\n",
+    "#     # Choose an IBMQ backend\n",
+    "#     ibmq_backend = input(\"Enter IBMQ backend = \") or \"ibmq_qasm_simulator\"\n",
     "\n",
-    "    # Prediction on IBMQ.\n",
+    "#     # Prediction on IBMQ.\n",
+    "#     for data_config, rnd_seed in product(data_config_list, rnd_seed_range):\n",
+    "        \n",
+    "#         # Seed everything.\n",
+    "#         general_config[\"rnd_seed\"] = rnd_seed\n",
+    "#         L.seed_everything(general_config[\"rnd_seed\"])\n",
+    "        \n",
+    "#         # Create the data module.\n",
+    "#         data_module = g_main.generate_datamodule(\n",
+    "#             data_config=data_config,\n",
+    "#             data_ratio=general_config[\"data_ratio\"],\n",
+    "#             batch_size=general_config[\"batch_size\"],\n",
+    "#             graph=False\n",
+    "#         )\n",
+    "\n",
+    "#         # Buffers for saving data.\n",
+    "#         x, y_true = torch.tensor([]), torch.tensor([])\n",
+    "#         y_penl, meas_penl = torch.tensor([]), torch.tensor([])\n",
+    "#         y_ibmq, meas_ibmq = torch.tensor([]), torch.tensor([])\n",
+    "\n",
+    "#         # Batch data and batch label will start with prefix \"_\".\n",
+    "#         for _x, _y_true in tqdm(data_module.test_dataloader()):\n",
+    "            \n",
+    "#             # Prediction on PennyLane.\n",
+    "#             _y_penl, _meas_penl = prediction(\n",
+    "#                 x=_x,\n",
+    "#                 data_config=data_config,\n",
+    "#                 quantum_config={\n",
+    "#                     \"qdevice\": \"default.qubit\",\n",
+    "#                     \"diff_method\": \"best\",\n",
+    "#                     \"qbackend\": \"\",\n",
+    "#                 }\n",
+    "#             )\n",
+    "\n",
+    "#             # Prediction on IBMQ.\n",
+    "#             _y_ibmq, _meas_ibmq = prediction(\n",
+    "#                 x=_x,\n",
+    "#                 data_config=data_config,\n",
+    "#                 quantum_config={\n",
+    "#                     \"qdevice\": \"qiskit.ibmq\",\n",
+    "#                     \"diff_method\": \"parameter-shift\",\n",
+    "#                     \"qbackend\": ibmq_backend,\n",
+    "#                 }\n",
+    "#             )\n",
+    "\n",
+    "#             # Dataset and true labels.\n",
+    "#             x = torch.cat((x, _x))\n",
+    "#             y_true = torch.cat((y_true, _y_true))\n",
+    "            \n",
+    "#             # Save predictions to buffers.\n",
+    "#             y_penl = torch.cat((y_penl, _y_penl))\n",
+    "#             y_ibmq = torch.cat((y_ibmq, _y_ibmq))\n",
+    "#             meas_penl = torch.cat((meas_penl, _meas_penl))\n",
+    "#             meas_ibmq = torch.cat((meas_ibmq, _meas_ibmq))\n",
+    "\n",
+    "#         # Output dictionary    \n",
+    "#         result = {\n",
+    "#             \"x\": x, \"y_true\": y_true,\n",
+    "#             \"y_penl\": y_penl, \"meas_penl\": meas_penl,\n",
+    "#             \"y_ibmq\": y_ibmq, \"meas_ibmq\": meas_ibmq\n",
+    "#         }\n",
+    "\n",
+    "#         # Save result to npy files.\n",
+    "#         npy_file = (\n",
+    "#             f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_\"\n",
+    "#             f\"r{general_config['rnd_seed']}-\"\n",
+    "#             f\"p{general_config['max_num_ptcs']}_\"\n",
+    "#             f\"n{general_config['num_bin_data']}_\"\n",
+    "#             f\"b{general_config['batch_size']}-\"\n",
+    "#             f\"{num_nr_qubits}_{num_layers}_{num_reupload}.npy\"\n",
+    "#         )\n",
+    "#         npy_path = os.path.join(ibmq_dir, npy_file)\n",
+    "#         np.save(npy_path, result, allow_pickle=True)\n",
+    "\n",
+    "# except Exception as e:\n",
+    "#     subject = f\"Failed to run ibmq on {ibmq_backend}\"\n",
+    "#     message = str(e)\n",
+    "\n",
+    "# else:\n",
+    "#     model_suffix = f\"qidx4_qnn{num_nr_qubits}_gl{num_layers}_gr{num_reupload}\"\n",
+    "#     subject = f\"Finished running ibmq on {ibmq_backend}\"\n",
+    "#     message = f\"Finish {model_suffix} with rnd_seed_range = {rnd_seed_range}\"\n",
+    "\n",
+    "# finally:\n",
+    "#     if os.path.isfile(\"gmail.json\"):\n",
+    "#         module_gmail.send_email(subject, message, config=general_config)\n",
+    "#     else:\n",
+    "#         print(subject)\n",
+    "#         print(message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test noise\n",
+    "\n",
+    "The noise channel uses `qml.DepolarizingChannel` and `qml.GeneralizedAmplitudeDamping`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise_prob_list = [5E-2, 1E-2, 1E-3, 1E-4, 1E-5, 1E-6]\n",
+    "\n",
+    "try:\n",
+    "    # Prediction with noise simulator.\n",
     "    for data_config, rnd_seed in product(data_config_list, rnd_seed_range):\n",
     "        \n",
     "        # Seed everything.\n",
@@ -206,57 +316,46 @@
     "            batch_size=general_config[\"batch_size\"],\n",
     "            graph=False\n",
     "        )\n",
-    "\n",
+    "        \n",
     "        # Buffers for saving data.\n",
     "        x, y_true = torch.tensor([]), torch.tensor([])\n",
-    "        y_penl, meas_penl = torch.tensor([]), torch.tensor([])\n",
-    "        y_ibmq, meas_ibmq = torch.tensor([]), torch.tensor([])\n",
+    "        y_noise = [torch.tensor([]) for _ in range(len(noise_prob_list))]\n",
+    "        meas_noise = [torch.tensor([]) for _ in range(len(noise_prob_list))]\n",
     "\n",
     "        # Batch data and batch label will start with prefix \"_\".\n",
     "        for _x, _y_true in tqdm(data_module.test_dataloader()):\n",
-    "            \n",
-    "            # Prediction on PennyLane.\n",
-    "            _y_penl, _meas_penl = prediction(\n",
-    "                x=_x,\n",
-    "                data_config=data_config,\n",
-    "                quantum_config={\n",
-    "                    \"qdevice\": \"default.qubit\",\n",
-    "                    \"diff_method\": \"best\",\n",
-    "                    \"qbackend\": \"\",\n",
-    "                }\n",
-    "            )\n",
     "\n",
-    "            # Prediction on IBMQ.\n",
-    "            _y_ibmq, _meas_ibmq = prediction(\n",
-    "                x=_x,\n",
-    "                data_config=data_config,\n",
-    "                quantum_config={\n",
-    "                    \"qdevice\": \"qiskit.ibmq\",\n",
-    "                    \"diff_method\": \"parameter-shift\",\n",
-    "                    \"qbackend\": ibmq_backend,\n",
-    "                }\n",
-    "            )\n",
+    "            # Loop over noise.\n",
+    "            for i, noise_prob in enumerate(noise_prob_list):\n",
+    "                \n",
+    "                # Prediction on PennyLane.\n",
+    "                _y_noise, _meas_noise = prediction(\n",
+    "                    x=_x,\n",
+    "                    data_config=data_config,\n",
+    "                    quantum_config={\n",
+    "                        \"qdevice\": \"default.mixed\",\n",
+    "                        \"qbackend\": \"\",\n",
+    "                        \"noise_prob\": noise_prob,\n",
+    "                    }\n",
+    "                )\n",
+    "\n",
+    "                # Save noise\n",
+    "                y_noise[i] = torch.cat((y_noise[i], _y_noise))\n",
+    "                meas_noise[i] = torch.cat((meas_noise[i], _meas_noise))\n",
     "\n",
     "            # Dataset and true labels.\n",
     "            x = torch.cat((x, _x))\n",
     "            y_true = torch.cat((y_true, _y_true))\n",
-    "            \n",
-    "            # Save predictions to buffers.\n",
-    "            y_penl = torch.cat((y_penl, _y_penl))\n",
-    "            y_ibmq = torch.cat((y_ibmq, _y_ibmq))\n",
-    "            meas_penl = torch.cat((meas_penl, _meas_penl))\n",
-    "            meas_ibmq = torch.cat((meas_ibmq, _meas_ibmq))\n",
     "\n",
     "        # Output dictionary    \n",
-    "        result = {\n",
-    "            \"x\": x, \"y_true\": y_true,\n",
-    "            \"y_penl\": y_penl, \"meas_penl\": meas_penl,\n",
-    "            \"y_ibmq\": y_ibmq, \"meas_ibmq\": meas_ibmq\n",
-    "        }\n",
+    "        result = {\"x\": x, \"y_true\": y_true,}\n",
+    "        for i, noise_prob in enumerate(noise_prob_list):\n",
+    "            result[f\"y_noise_{noise_prob:.0e}\"] = y_noise[i]\n",
+    "            result[f\"meas_noise_{noise_prob:.0e}\"] = meas_noise[i]\n",
     "\n",
     "        # Save result to npy files.\n",
     "        npy_file = (\n",
-    "            f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_\"\n",
+    "            f\"noise-{data_config['abbrev']}_\"\n",
     "            f\"r{general_config['rnd_seed']}-\"\n",
     "            f\"p{general_config['max_num_ptcs']}_\"\n",
     "            f\"n{general_config['num_bin_data']}_\"\n",
@@ -267,20 +366,16 @@
     "        np.save(npy_path, result, allow_pickle=True)\n",
     "\n",
     "except Exception as e:\n",
-    "    subject = f\"Failed to run ibmq on {ibmq_backend}\"\n",
+    "    subject = f\"Noise D={D} failed\"\n",
     "    message = str(e)\n",
     "\n",
     "else:\n",
-    "    model_suffix = f\"qidx4_qnn{num_nr_qubits}_gl{num_layers}_gr{num_reupload}\"\n",
-    "    subject = f\"Finished running ibmq on {ibmq_backend}\"\n",
-    "    message = f\"Finish {model_suffix} with rnd_seed_range = {rnd_seed_range}\"\n",
+    "    subject = f\"Noise D={D} finished\"\n",
+    "    message = f\"Finish D={D} with noise = {noise_prob_list}\"\n",
     "\n",
     "finally:\n",
     "    if os.path.isfile(\"gmail.json\"):\n",
-    "        module_gmail.send_email(subject, message, config=general_config)\n",
-    "    else:\n",
-    "        print(subject)\n",
-    "        print(message)"
+    "        module_gmail.send_email(subject, message, config=general_config)"
    ]
   }
  ],
