--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -129,9 +129,6 @@
     "        # Api can be used to fetch training results.\n",
     "        api = wandb.Api()\n",
     "\n",
-    "    # Configuration of quantum devices (PennyLane simulation or IBMQ real devices).\n",
-    "    quantum_config = {\"qdevice\": \"default.qubit\", \"qbackend\": \"\"}\n",
-    "\n",
     "    # Test whether the code can run for at least 1 epoch.\n",
     "    if general_config[\"quick_test\"] == True:\n",
     "        general_config[\"max_epochs\"] = 1\n",
@@ -919,6 +916,7 @@
     "def execute_quantum(\n",
     "        general_config: dict,\n",
     "        data_config: dict,\n",
+    "        quantum_config: dict,\n",
     "        qnn: int,\n",
     "        gl: int,\n",
     "        gr: int,\n",
@@ -934,6 +932,8 @@
     "            Dictionary of general settings.\n",
     "        data_config : dict\n",
     "            Data configuration for generating data module.\n",
+    "        quantum_config : dict\n",
+    "            Quantum device setup.\n",
     "        qnn : int\n",
     "            Number of NR qubits.\n",
     "        gl : int\n",
@@ -1059,8 +1059,9 @@
     "    # execute_classical(general_config, data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
     "\n",
     "    # # Quantum QCGNN with NR qubits = reuploads = {3, 5, 7}.\n",
+    "    # quantum_config = {\"qdevice\": \"default.qubit\", \"qbackend\": \"\"}\n",
     "    # for q in [3, 5, 7]:\n",
-    "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
+    "    #     execute_quantum(general_config, data_config, quantum_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
    ]
   }
  ],
