--- a/result_ibmq.ipynb
+++ b/result_ibmq.ipynb
@@ -11,101 +11,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from itertools import product\n",
+    "import json\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "import g_main\n",
-    "\n",
-    "general_config = g_main.json_config\n",
-    "ibmq_dir = os.path.join(general_config[\"predictions_dir\"], \"ibmq\")"
+    "with open(\"config.json\", \"r\") as json_file:\n",
+    "    json_config = json.load(json_file)\n",
+    "    ibmq_dir = os.path.join(json_config[\"predictions_dir\"], \"ibmq\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Channel: BB-QCD | Backend: ibm_cusco | Size: 100\n",
-      "\n",
-      "      | SIM  ACC | IBMQ ACC | S/I  ACC | S/I DIFF\n",
-      "--------------------------------------------------\n",
-      "Q = 3 |   0.48   |   0.50   |   0.96   |   0.35   \n",
-      "--------------------------------------------------\n",
-      "Q = 6 |   0.40   |   0.50   |   0.24   |   0.55   \n",
-      "--------------------------------------------------\n",
-      "Q = 9 |   0.52   |   0.50   |   0.98   |   0.10   \n",
-      "\n",
-      "##################################################\n",
-      "\n",
-      "* Channel: TT-QCD | Backend: ibm_cusco | Size: 100\n",
-      "\n",
-      "      | SIM  ACC | IBMQ ACC | S/I  ACC | S/I DIFF\n",
-      "--------------------------------------------------\n",
-      "Q = 3 |   0.59   |   0.50   |   0.85   |   0.46   \n",
-      "--------------------------------------------------\n",
-      "Q = 6 |   0.63   |   0.50   |   0.63   |   0.30   \n",
-      "--------------------------------------------------\n",
-      "Q = 9 |   0.52   |   0.48   |   0.60   |   0.25   \n",
-      "\n",
-      "##################################################\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shots = 1024\n",
-    "batch_size = 10\n",
-    "num_pt_ptcs = 4\n",
-    "num_bin_data = 25\n",
-    "backend_list = [\"ibm_cusco\"]\n",
+    "num_pt_ptcs = 2\n",
+    "num_bin_data = 100\n",
+    "backend_list = [\"ibmq_mumbai\"]\n",
     "channel_list = [\"BB-QCD\", \"TT-QCD\"]\n",
+    "rnd_seed_list = range(3)\n",
     "\n",
-    "def get_ibmq_output(npy_path):\n",
+    "def read_ibmq_npy(backend, abbrev, num_nr_qubits, rnd_seed):\n",
+    "    \"\"\"Read the IBMQ result (npy file).\"\"\"\n",
+    "\n",
+    "    global shots, num_pt_ptcs, num_bin_data\n",
+    "\n",
+    "    for ibmq_file in os.listdir(ibmq_dir):\n",
+    "        check_backend = f\"{backend}-s{shots}\" in ibmq_file\n",
+    "        check_data = f\"{abbrev}_r{rnd_seed}-p{num_pt_ptcs}_n{num_bin_data}\" in ibmq_file\n",
+    "        check_model = f\"{num_nr_qubits}_1_{num_nr_qubits}\" in ibmq_file\n",
+    "        if check_backend and check_data and check_model:\n",
+    "            npy_path = os.path.join(ibmq_dir, ibmq_file)\n",
+    "            break\n",
+    "    else:\n",
+    "        raise FileNotFoundError(\n",
+    "            \"Not found file with ->\\n\"\n",
+    "            f\" * {backend}-s{shots}\\n\"\n",
+    "            f\" * {abbrev}_r{rnd_seed}-p{num_pt_ptcs}_n{num_bin_data}\\n\"\n",
+    "            f\" * {num_nr_qubits}_1_{num_nr_qubits}\\n\"\n",
+    "        )\n",
     "    result = np.load(npy_path, allow_pickle=True)\n",
     "    result = result.item()\n",
     "    return result\n",
     "\n",
-    "rnd_seed= 2\n",
-    "for abbrev, backend in product(channel_list, backend_list):\n",
-    "    print(f\"* Channel: {abbrev} | Backend: {backend} | Size: {100}\\n\")\n",
-    "    print(f\"      | SIM  ACC | IBMQ ACC | S/I  ACC | S/I DIFF\")\n",
-    "    for Q in [3, 6, 9]:\n",
+    "def read_noise_npy(abbrev, num_nr_qubits, rnd_seed):\n",
+    "    \"\"\"Read the IBMQ result (npy file).\"\"\"\n",
+    "\n",
+    "    global num_pt_ptcs, num_bin_data\n",
+    "\n",
+    "    for ibmq_file in os.listdir(ibmq_dir):\n",
+    "        check_noise = f\"noise\" in ibmq_file\n",
+    "        check_data = f\"{abbrev}_r{rnd_seed}-p{num_pt_ptcs}_n{num_bin_data}\" in ibmq_file\n",
+    "        check_model = f\"{num_nr_qubits}_1_{num_nr_qubits}\" in ibmq_file\n",
+    "        if check_noise and check_data and check_model:\n",
+    "            npy_path = os.path.join(ibmq_dir, ibmq_file)\n",
+    "            break\n",
+    "    else:\n",
+    "        raise FileNotFoundError(\n",
+    "            \"Not found file with ->\\n\"\n",
+    "            f\" * noise-\\n\"\n",
+    "            f\" * {abbrev}_r{rnd_seed}-p{num_pt_ptcs}_n{num_bin_data}\\n\"\n",
+    "            f\" * {num_nr_qubits}_1_{num_nr_qubits}\\n\"\n",
+    "        )\n",
+    "    result = np.load(npy_path, allow_pickle=True)\n",
+    "    result = result.item()\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise_prod_list = [1E-1, 5E-2, 1E-2, 5E-3, 1E-3]\n",
+    "\n",
+    "for abbrev, backend, rnd_seed in product(channel_list, backend_list, rnd_seed_list):\n",
+    "    print(f\"* Channel: {abbrev} | Backend: {backend} | Size: {100} | Random seed: {rnd_seed}\\n\")\n",
+    "    print(f\"          | SIM  ACC | IBMQ ACC | S/I  ACC | S/I DIFF |\", end=\"\")\n",
+    "    print(\"|\".join([f\"  {noise_prod:.0e}   \" for noise_prod in noise_prod_list]))\n",
+    "\n",
+    "    for num_nr_qubits in [3, 5, 7]:\n",
     "        # Horizontal splitting line.\n",
-    "        print(f\"--------------------------------------------------\")\n",
+    "        print(\"-\" * 120)\n",
     "        \n",
     "        # Read npy file.\n",
-    "        npy_file = (\n",
-    "            f\"{backend}-s{shots}-{abbrev}_\"\n",
-    "            + f\"r{rnd_seed}-p{num_pt_ptcs}_\"\n",
-    "            + f\"n{num_bin_data}_\"\n",
-    "            + f\"b{batch_size}-{Q}_1_{Q}\"\n",
-    "            + \".npy\"\n",
-    "        )\n",
-    "        result = np.load(os.path.join(ibmq_dir, npy_file), allow_pickle=True)\n",
-    "        result = result.item()\n",
+    "        result = read_ibmq_npy(backend, abbrev, num_nr_qubits, rnd_seed)\n",
+    "        result.update(read_noise_npy(abbrev, num_nr_qubits, rnd_seed))\n",
     "\n",
     "        # Prepare true labels and predictions.\n",
     "        y_true = result[\"y_true\"].reshape(-1).numpy()\n",
-    "        y_penl = result[\"y_penl\"].reshape(-1).numpy()\n",
-    "        y_ibmq = result[\"y_ibmq\"].reshape(-1).numpy()\n",
+    "        y_penl = result[\"y_penl\"].reshape(-1).detach().numpy()\n",
+    "        y_ibmq = result[\"y_ibmq\"].reshape(-1).detach().numpy()\n",
+    "\n",
+    "        # Noise accuracy\n",
+    "        y_noise = [\n",
+    "            result[f\"y_noise_{noise_prod:.0e}\"].reshape(-1).detach().numpy() \\\n",
+    "            for noise_prod in noise_prod_list\n",
+    "        ]\n",
     "\n",
     "        # Calculate accuracy and loss (difference).\n",
-    "        SIM__ACC = (y_true == (y_penl > 0)).mean()\n",
-    "        IBMQ_ACC = (y_true == (y_ibmq > 0)).mean()\n",
-    "        S_I__ACC = ((y_penl > 0) == (y_ibmq > 0)).mean()\n",
-    "        S_I_DIFF = np.mean(np.abs(y_penl - y_ibmq))\n",
-    "        print(f\"Q = {Q} |   {SIM__ACC:.2f}   |   {IBMQ_ACC:.2f}   |   {S_I__ACC:.2f}   |   {S_I_DIFF:.2f}   \")\n",
-    "    print(\"\\n\" + \"#\"*50 + \"\\n\")"
+    "        acc_list = []\n",
+    "        acc_list.append((y_true == (y_penl > 0)).mean()) # Simulation accuracy.\n",
+    "        acc_list.append((y_true == (y_ibmq > 0)).mean()) # IBMQ accuracy.\n",
+    "        acc_list.append(((y_penl > 0) == (y_ibmq > 0)).mean()) # S/I accuracy.\n",
+    "        acc_list.append(np.mean(np.abs(y_penl - y_ibmq))) # S/I diff.\n",
+    "\n",
+    "        # Add noise accuracy.\n",
+    "        acc_list += [(y_true == (_y_noise > 0)).mean() for _y_noise in y_noise]\n",
+    "\n",
+    "        print(f\"  Q = {num_nr_qubits}   |\", end=\"\")\n",
+    "        print(\"|\".join([f\"   {acc:.2f}   \" for acc in acc_list]))\n",
+    "    \n",
+    "    print(\"\\n\" + \"#\" * 120 + \"\\n\")"
    ]
   }
  ],
