20240520 Rename `src` to `source` for Jupyter Problem

--- a/test/compare_encoding.ipynb
+++ b/test/compare_encoding.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "sys.path.append(os.path.abspath('../'))\n",
     "\n",
-    "from src.models import qcgnn"
+    "from source.models import qcgnn"
    ]
   },
   {
