--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "import torch.nn as nn\n",
     "import wandb\n",
     "\n",
-    "from src.data.preprocessing import FatJetEvents\n",
-    "from src.data.datamodule import JetTorchDataModule, JetGraphDataModule\n",
-    "from src.models.qcgnn import QuantumRotQCGNN\n",
-    "from src.models.mpgnn import ClassicalMPGNN\n",
-    "from src.training.litmodel import TorchLightningModule, GraphLightningModel\n",
-    "from src.training.loggers import csv_logger, wandb_logger\n",
+    "from source.data.preprocessing import FatJetEvents\n",
+    "from source.data.datamodule import JetTorchDataModule, JetGraphDataModule\n",
+    "from source.models.qcgnn import QuantumRotQCGNN\n",
+    "from source.models.mpgnn import ClassicalMPGNN\n",
+    "from source.training.litmodel import TorchLightningModule, GraphLightningModel\n",
+    "from source.training.loggers import csv_logger, wandb_logger\n",
     "\n",
     "with open('configs/config.yaml', 'r') as file:\n",
     "    config = yaml.safe_load(file)\n",
@@ -37,18 +37,15 @@
     "    \"\"\"Randomly create a data module.\"\"\"\n",
     "    \n",
     "    # Read jet data (reading is not affected by random seed).\n",
-    "    sig_events = FatJetEvents(channel=config['Data']['sig'], **config['Data'])\n",
-    "    bkg_events = FatJetEvents(channel=config['Data']['bkg'], **config['Data'])\n",
-    "\n",
-    "    # Randomly generated uniform events (will be affected by random seed).\n",
-    "    sig_events = sig_events.generate_uniform_pt_events()\n",
-    "    bkg_events = bkg_events.generate_uniform_pt_events()\n",
+    "    channels = ['VzToQCD', 'VzToZhToVevebb', 'VzToTt']\n",
+    "    events = [FatJetEvents(channel=channel, **config['Data']) for channel in channels]\n",
+    "    events = [_events.generate_uniform_pt_events() for _events in events]\n",
     "\n",
     "    # Turn into data module (for lightning training module).\n",
     "    if graph:\n",
-    "        data_module = JetGraphDataModule(sig_events, bkg_events, **config['Data'])\n",
+    "        data_module = JetGraphDataModule(events, **config['Data'])\n",
     "    else:\n",
-    "        data_module = JetTorchDataModule(sig_events, bkg_events, **config['Data'])\n",
+    "        data_module = JetTorchDataModule(events, **config['Data'])\n",
     "\n",
     "    return data_module\n",
     "\n",
@@ -58,6 +55,7 @@
     "\n",
     "    # Hyperparameters and configurations that will be recorded.\n",
     "    training_info = {}\n",
+    "    training_info.update(config['Settings'])\n",
     "    training_info.update(config['Data'])\n",
     "    training_info.update(config['Train'])\n",
     "    training_info.update(config['Model'])\n",
@@ -85,6 +83,7 @@
     "    training_info['model_description'] = model_description\n",
     "    training_info['data_description'] = data_description\n",
     "    training_info['name'] = name\n",
+    "    training_info['date'] = config['date']\n",
     "\n",
     "    return training_info\n",
     "\n",
@@ -185,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for random_seed in range(3):\n",
+    "for random_seed in range(1):\n",
     "    print('=' * 10 + f\"Random Seed {random_seed}\" + '-' * 10)\n",
     "\n",
     "    # MPGNN\n",
@@ -196,14 +195,14 @@
     "\n",
     "    # SUPER MPGNN\n",
     "    print(f\" * Train MPGNN {1024}.\")\n",
-    "    mpgnn_hparams = {'gnn_in': 6, 'gnn_out': 1024, 'gnn_layers': 2, 'gnn_hidden': 1024}\n",
+    "    mpgnn_hparams = {'gnn_in': 6, 'gnn_out': 1024, 'gnn_layers': 4, 'gnn_hidden': 1024}\n",
     "    train_mpgnn(random_seed=random_seed, model_hparams=mpgnn_hparams)\n",
     "\n",
     "    # QCGNN\n",
     "    for num_nr_qubits in [3, 5, 7]:\n",
     "        print(f\" * Train QCGNN {num_nr_qubits}.\")\n",
     "        qcgnn_hparams = {'num_ir_qubits': 4, 'num_nr_qubits': num_nr_qubits, 'num_layers': 1, 'num_reupload': num_nr_qubits}\n",
-    "        train_qcgnn(random_seed=0, model_hparams=qcgnn_hparams)"
+    "        train_qcgnn(random_seed=random_seed, model_hparams=qcgnn_hparams)"
    ]
   }
  ],
