--- a/test/fatjet_information.ipynb
+++ b/test/fatjet_information.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
     "\n",
     "sys.path.append(os.path.abspath('../'))\n",
     "\n",
-    "from src.data import preprocessing\n",
+    "from source.data import preprocessing\n",
     "\n",
     "sns.set_theme()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
